--- a/index.html
+++ b/index.html
@@ -1,5 +1,24 @@
-hello js rocket
 
-<script type="text/javascript">
+<<!DOCTYPE html>
+<html>
+<head>
+	<title>JS ROCKET</title>
+	<script type="text/javascript">
   console.log("hello there!");
 </script>
+
+</head>
+<body>
+
+	<h1>Hello JS Rocket</h1>
+
+
+</body>
+</body>
+
+
+
+
+
+
+
